--- a/shuttle-cch23/Cargo.toml
+++ b/shuttle-cch23/Cargo.toml
@@ -10,4 +10,7 @@ shuttle-runtime = "0.34.1"
 tokio = "1.28.2"
 tracing = "0.1.40"
 serde = { version = "1.0.193", features = ["derive"] }
-ordered-float = "4.1.1"
+serde_json = "1.0.108"
+ordered-float = "4.2.0"
+base64 = "0.21.5"
+anyhow = "1.0.75"
