--- a/shuttle-cch23/Cargo.toml
+++ b/shuttle-cch23/Cargo.toml
@@ -14,3 +14,4 @@ serde_json = "1.0.108"
 ordered-float = "4.2.0"
 base64 = "0.21.5"
 anyhow = "1.0.75"
+reqwest = { version = "0.11.22", features = ["json"] }
